assets/css/styles.css
/*
 * File: styles.css
 * Created Date: 5th Mar 2024 15:55:26
 * Author: HanhBT <buihanh2304@gmail.com>
 * -----
 * Copyright (c) 2024 HanhBT
 * -----
 */
c-wiz[data-creator-id]
  div[jsname][jscontroller][jsaction]
  > img[data-emoji-uuid] {
  width: 64px !important;
  height: 64px !important;
  max-height: 64px !important;
  border-radius: 8px !important;
}

[aria-label$="to view people who reacted."] {
  height: 64px !important;
  max-height: 64px !important;
  width: 80px !important;
  max-width: 80px !important;
}

[aria-label$="to view people who reacted."] img[data-emoji-uuid] {
  width: 48px !important;
  max-height: 48px !important;
  height: 48px !important;
  border-radius: 6px !important;
}

[aria-label$="to view people who reacted."] img[data-emoji] {
  margin-top: 16px !important;
}

[aria-label$="to view people who reacted."] > div > span:last-child {
  line-height: 48px !important;
}

.working-time {
  cursor: pointer;
  background-color: #eaf1fb;
  border-radius: 24px;
  border: none;
  margin-bottom: 0;
  padding: 16px 8px;
  margin-right: 16px;
  font-weight: bold;
}

.working-time-modal {
  position: fixed;
  z-index: 999;
  flex-direction: column;
  gap: 8px;
  padding: 16px;
  border-radius: 8px;
  background: #fff;
  border: 1px solid transparent;
  box-shadow: 0 1px 1px 0 rgba(65,69,73,.3),0 1px 3px 1px rgba(65,69,73,.15);
}

.working-time-modal:not([hidden]) {
  display: flex;
}

.working-time-modal label {
  display: block;
}

.working-time-modal input {
  box-sizing: border-box;
  display: block;
  width: 100%;
  padding: 8px;
  border-radius: 6px;
  border: 1px solid rgba(65,69,73,.15);
}

.working-time-modal select {
  box-sizing: border-box;
  display: block;
  width: 100%;
  padding: 8px;
  background-color: #fff;
  border-radius: 6px;
  border: 1px solid rgba(65,69,73,.15);
}

#hbtTooltip {
  position: fixed;
  overflow: hidden;
  z-index: 10;
  width: 160px;
  height: 160px;
  border-radius: 8px;
  background-color: rgba(0, 0, 0, 0.5);
}

#hbtTooltipContainer {
  padding: 8px;
}

#hbtTooltipContainer img {
  width: 100%;
  height: 100%;
  display: block;
  border-radius: 8px;
  object-fit: contain;
}

#hbtTooltip.full-screen {
  z-index: 2000000001;
  width: 480px;
  height: 480px;
}

.circle {
  border: 0;
  position: relative;
  border-radius: 100%;
  box-shadow: none;
  display: block;
}

.circle::before,
.circle::after {
  border-radius: 100%;
  box-sizing: inherit;
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 60px;
  height: 60px;
}

.circle::before {
  border: 2px solid transparent;
}

.circle:hover::before {
  animation-name: border;
  animation-timing-function: linear;
  animation-duration: 0.5s;
  animation-fill-mode: forwards;
}

.circle::after {
  border: 2px solid transparent;
}

.circle:hover::after {
  border-top-color: #b3261e;
  transform: rotate(270deg);
  transition: transform 0.5s linear 0s, -webkit-transform 0.5s linear 0s;
}

@keyframes border {
  0% {
    border-top-color: #b3261e;
    border-right-color: transparent;
    border-bottom-color: transparent;
  }
  0.01% {
    border-top-color: #b3261e;
    border-right-color: transparent;
    border-bottom-color: transparent;
  }

  33.32% {
    border-top-color: #b3261e;
    border-right-color: transparent;
    border-bottom-color: transparent;
  }
  33.33% {
    border-top-color: #b3261e;
    border-right-color: #b3261e;
    border-bottom-color: transparent;
  }

  33.34% {
    border-top-color: #b3261e;
    border-right-color: #b3261e;
    border-bottom-color: transparent;
  }

  66.65% {
    border-top-color: #b3261e;
    border-right-color: #b3261e;
    border-bottom-color: transparent;
  }
  66.66% {
    border-top-color: #b3261e;
    border-right-color: #b3261e;
    border-bottom-color: #b3261e;
  }
  66.67% {
    border-top-color: #b3261e;
    border-right-color: #b3261e;
    border-bottom-color: #b3261e;
  }

  100% {
    border-top-color: #b3261e;
    border-right-color: #b3261e;
    border-bottom-color: #b3261e;
  }
}

